feat: runtime-dom patchStyle

--- a/packages/vue/examples/runtime/render-element.html
+++ b/packages/vue/examples/runtime/render-element.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app" style="color: aqua;"></div>
 </body>
 
 <script>
@@ -22,9 +22,9 @@
             { 'cls2': true, 'cls3': true }
         ],
         style: [
-            "font-weight:bold;font-size:60px",
+            "fonxt-weight:bold;font-size:60px",
             {
-                'color': 'blue'
+                'color': ['red', 'blue', 'green']
             }
         ],
     }, 'hello word')
