--- a/packages/vue/examples/reactivity/effect-lazy.html
+++ b/packages/vue/examples/reactivity/effect-lazy.html
@@ -29,6 +29,11 @@
 
     state.count = 1
 
+    // effect 内部 
+    // if (!options || !options.lazy) {
+    //     effect.run()
+    // }
+
 </script>
 
 </html>
